<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"
        android:src="@drawable/location_pin"
        tools:layout_editor_absoluteY="341dp"
        android:id="@+id/iv_pin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/phone_number_text"
        android:padding="10dp"
        android:textColorHint="@color/red"
        android:textColor="@color/red"
        android:inputType="phone"
        android:maxLength="25"
        android:id="@+id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/iv_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/phone"
        android:background="@drawable/edittext_rounded_corners"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/password_text"
        android:padding="10dp"
        android:textColorHint="@color/red"

        android:textColor="@color/red"
        android:inputType="textPassword"
        android:maxLength="25"
        android:id="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="5dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/lock"
        android:background="@drawable/edittext_rounded_corners"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me_text"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:buttonTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@id/et_password"
        android:layout_marginTop="20dp"
        android:id="@+id/cb_remember_me"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/cb_remember_me"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintBottom_toBottomOf="@id/cb_remember_me"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:layout_width="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/login_text"
        android:id="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:id="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"/>






</androidx.constraintlayout.widget.ConstraintLayout>